--- a/angular-tour-of-heroes/src/app/app.component.html
+++ b/angular-tour-of-heroes/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<router-outlet></router-outlet>
+<nav>
+  <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/dashboard">Dashboard</a>
+</nav>
+<app-messages></app-messages>
